Details
-
Type:
Bug
-
Status: Closed
-
Priority:
P2: Important
-
Resolution: Done
-
Affects Version/s: 5.2.0 Alpha
-
Fix Version/s: 5.2.0
-
Component/s: Documentation
-
Labels:None
-
Commits:72b94748c67cee677e7b935ee7730f57734de138
Description
The headers and sources configuration variables have values that are relative to the location of the qdocconf file they are contained in. Currently, these file paths are not canonicalized before they are added to the list of files to be parsed by qdoc. But the paths of files obtained from the headerdirs and sourcedirs variables are canonicalized. This difference can result in the same file appearing in the list twice, which makes qdoc parse it twice.